added python major/minor version tests updated python api to use ssize_t for s# values and PY_SSIZE_T_CLEAN macro for python 3.10+

--- a/config.h.in
+++ b/config.h.in
@@ -339,6 +339,9 @@
 /* Suffix for loadable modules */
 #undef SQLRELAY_MODULESUFFIX
 
+/* Some systems have Python 3.10+ */
+#undef SQLRELAY_NEED_PY_SSIZE_T_CLEAN
+
 /* Some systems use SQLLEN * in SQLRowCount */
 #undef SQLROWCOUNT_SQLLEN
 
