--- a/test/testall.sh.in
+++ b/test/testall.sh.in
@@ -42,7 +42,7 @@ do
 	# for tls, krb, and extensions tests, verify that we support oracle
 	if ( test "$DB" = "tls" -o "$DB" = "krb" -o "$DB" = "extensions" )
 	then
-		if ( test -z "`ls $PREFIX/lib*/sqlrelay/sqlrconnection_oracle.so 2> /dev/null`" )
+		if ( test -z "`ls $PREFIX/lib*/sqlrelay/sqlrconnection_oracle.* 2> /dev/null`" )
 		then
 			echo "skipping $DB..."
 			echo
@@ -54,7 +54,7 @@ do
 	# for the mysqlprotocol test, verify that we support the mysql database
 	elif ( test "$DB" = "mysqlprotocol" )
 	then
-		if ( test -z "`ls $PREFIX/lib*/sqlrelay/sqlrconnection_mysql.so 2> /dev/null`" )
+		if ( test -z "`ls $PREFIX/lib*/sqlrelay/sqlrconnection_mysql.* 2> /dev/null`" )
 		then
 			echo "skipping $DB..."
 			echo
@@ -66,7 +66,7 @@ do
 	# for the postgresqlprotocol test, verify that we support the postgresql database
 	elif ( test "$DB" = "postgresqlprotocol" )
 	then
-		if ( test -z "`ls $PREFIX/lib*/sqlrelay/sqlrconnection_postgresql.so 2> /dev/null`" )
+		if ( test -z "`ls $PREFIX/lib*/sqlrelay/sqlrconnection_postgresql.* 2> /dev/null`" )
 		then
 			echo "skipping $DB..."
 			echo
@@ -77,7 +77,7 @@ do
 
 	# for other tests, verify that we support the database
 	else
-		if ( test -z "`ls $PREFIX/lib*/sqlrelay/sqlrconnection_$DB.so 2> /dev/null`" )
+		if ( test -z "`ls $PREFIX/lib*/sqlrelay/sqlrconnection_$DB.* 2> /dev/null`" )
 		then
 			echo "skipping $DB..."
 			echo
@@ -90,7 +90,7 @@ do
 	# for router tests, also verify that we support mysql
 	if ( test "$DB" = "router" )
 	then
-		if ( test -z "`ls $PREFIX/lib*/sqlrelay/sqlrconnection_mysql.so 2> /dev/null`" )
+		if ( test -z "`ls $PREFIX/lib*/sqlrelay/sqlrconnection_mysql.* 2> /dev/null`" )
 		then
 			echo "skipping $DB..."
 			echo
