refactored parseInsert to return a linked list of columns

--- a/src/common/defines.h.in
+++ b/src/common/defines.h.in
@@ -203,6 +203,7 @@
 #define SQLR_ERROR_RESULTSETROWTRANSLATION 900031
 #define SQLR_ERROR_RESULTSETROWBLOCKTRANSLATION 900032
 #define SQLR_ERROR_CHARACTER_CONVERSION_FAILED 900033
+#define SQLR_ERROR_TRIGGER 900034
 
 
 #define SQLR_ERROR_ROLLBACK_NOT_IN_TX_BLOCK 999997
