added upsert tests to standard build

--- a/test/c++/Makefile
+++ b/test/c++/Makefile
@@ -26,7 +26,9 @@ all: db2 \
 	router \
 	extensions \
 	krb \
-	tls
+	tls \
+	mysqlupsert \
+	postgresqlupsert
 
 clean:
 	$(LTCLEAN) $(RM) *.lo *.o *.obj db2$(EXE) db27$(EXE) db26$(EXE) freetds$(EXE) firebird$(EXE) informix$(EXE) mysql$(EXE) oracleclobfetch$(EXE) oracleclobinsert$(EXE) oracle$(EXE) oracle8$(EXE) oracle7$(EXE) postgresql$(EXE) sqlite$(EXE) sap$(EXE) router$(EXE) extensions$(EXE) krb$(EXE) tls$(EXE) deadlockreplay$(EXE) emoji$(EXE) mysqlupsert$(EXE) postgresqlupsert$(EXE) cachefile* sqlnet.log
