--- a/test/sqlrelay.conf.d/postgresqlupsert.conf.in
+++ b/test/sqlrelay.conf.d/postgresqlupsert.conf.in
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <instances>
 
-	<instance id="postgresqltest" port="9000" socket="/tmp/test.socket" dbase="postgresql" debug="triggers">
+	<instance id="postgresqlupserttest" port="9000" socket="/tmp/test.socket" dbase="postgresql">
 		<users>
 			<user user="test" password="test"/>
 		</users>
