--- a/src/common/defines.h.in
+++ b/src/common/defines.h.in
@@ -51,7 +51,8 @@
 #define GET_CURRENT_SCHEMA 37
 #define NEXT_RESULT_SET 38
 #define GETTABLELIST2 39
-#define MAXCOMMAND 39
+#define NEXTVALFORMAT 40
+#define MAXCOMMAND 40
 
 #define SUSPENDED_RESULT_SET 1
 #define NO_SUSPENDED_RESULT_SET 0
