--- a/test/sqlrelay.conf.d/mssql.conf.in
+++ b/test/sqlrelay.conf.d/mssql.conf.in
@@ -3,10 +3,10 @@
 
 	<instance id="mssqltest" port="9000" socket="/tmp/test.socket" dbase="odbc">
 		<users>
-			<user user="testuser" password="testpassword"/>
+			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="dsn=mssqlodbc;user=testuser;password=testpassword"/>
+			<connection string="dsn=mssqlodbc;user=testuser;password=testpassword;lastinsertidquery=select @@identity"/>
 		</connections>
 	</instance>
 
