--- a/test/crud/Makefile
+++ b/test/crud/Makefile
@@ -10,7 +10,7 @@ include ../../config.mk
 .cpp.obj:
 	$(CXX) $(CXXFLAGS) $(CPPTESTCPPFLAGS) $(COMPILE) $<
 
-all: crud mvccrud.cgi mvccrud.$(LIBEXT)
+all: crud mvccrud.cgi mod_mvccrud.$(LIBEXT)
 
 crud: crud.cpp crud.$(OBJ)
 	$(LTLINK) $(LINK) $(LDFLAGS) $(OUT)$@$(EXE) crud.$(OBJ) $(CPPTESTLIBS)
@@ -21,9 +21,20 @@ mvccrud.cgi: mvccrud.cpp mvccrud.$(OBJ)
 mvccrud-apache.$(OBJ): mvccrud.cpp
 	$(LTCOMPILE) $(CXX) $(CXXFLAGS) $(CPPTESTCPPFLAGS) `rudiments-config --apache-cflags` -DAPACHE $(COMPILE) $< $(OUT)$@
 
-mvccrud.$(LIBEXT): mvccrud.cpp mvccrud-apache.$(OBJ)
-	$(LTLINK) $(LINK) $(OUT)$@ mvccrud.$(OBJ) $(LDFLAGS) $(CPPTESTLIBS) -lrudiments-apache $(MODLINKFLAGS)
+mod_mvccrud.$(LIBEXT): mvccrud.cpp mvccrud-apache.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ mvccrud-apache.$(OBJ) $(LDFLAGS) $(CPPTESTLIBS) -lrudiments-apache $(MODLINKFLAGS)
 
 clean:
 	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii crud$(EXE) mvccrud.cgi
 	$(RMTREE) .libs
+
+install:
+	$(LTINSTALL) $(CP) mvccrud.cgi /var/www/html
+	$(LTINSTALL) $(CP) mod_mvccrud.$(LIBEXT) /etc/httpd/modules
+	$(RM) /etc/httpd/modules/mod_mvccrud.a
+	$(RM) /etc/httpd/modules/mod_mvccrud.la
+	systemctl restart httpd
+
+uninstall:
+	$(RM) /var/www/html/mvccrud.cgi
+	$(RM) /etc/httpd/modules/mod_mvccrud.*
