--- a/config.mk.in
+++ b/config.mk.in
@@ -90,6 +90,8 @@ LIBEXT = la
 SRVLINKFLAGS = -rpath $(libdir) -version-info $(SRV_SONAME_VERSION_INFO) -no-undefined
 CLTLINKFLAGS = -rpath $(libdir) -version-info $(CLT_SONAME_VERSION_INFO) -no-undefined
 MODLINKFLAGS = -rpath $(libexecdir) -avoid-version -module -no-undefined
+APACHELINKFLAGS = $(MODLINKFLAGS)
+#APACHELINKFLAGS = @APACHELINKFLAGS@
 
 
 # install commands
