--- a/test/crud/Makefile
+++ b/test/crud/Makefile
@@ -30,10 +30,34 @@ clean:
 
 install: installcgi installmod
 
+# fedora, ubuntu, older ubuntu, opensuse, old redhat, freebsd, old freebsd,
+# openbsd, netbsd, solaris, old solaris, older solaris, os x
 DOCROOTS=/var/www/html \
-		/home/httpd/html
+		/var/www/apache2-default \
+		/var/www \
+		/srv/www/htdocs \
+		/home/httpd/html \
+		/usr/local/www/apache24/data \
+		/usr/local/www/apache22/data \
+		/usr/pkg/share/httpd/htdocs \
+		/var/www/htdocs \
+		/var/apache2/2.4/htdocs \
+		/var/apache2/htdocs \
+		/var/apache/htdocs \
+		/Library/WebServer/Documents
 
+# fedora/old redhat, ubuntu, opensuse, freebsd, old freebsd, openbsd, netbsd,
+# solaris, old solaris, older solaris, os x
 MODULEDIRS=/etc/httpd/modules \
+		/usr/lib/apache2/modules \
+		/usr/lib64/apache2 \
+		/usr/local/libexec/apache24 \
+		/usr/local/libexec/apache22 \
+		/usr/pkg/lib/httpd \
+		/usr/local/lib/apache2 \
+		/usr/apache2/2.4/libexec \
+		/usr/apache2/libexec \
+		/usr/apache/libexec \
 		/usr/libexec/httpd
 
 installcgi:
@@ -42,6 +66,7 @@ installcgi:
 		if ( test -d "$$path" ); \
 		then \
 			$(LTINSTALL) $(CP) mvccrud.cgi $$path; \
+			break; \
 		fi; \
 	done
 
@@ -53,6 +78,7 @@ installmod:
 			$(LTINSTALL) $(CP) mod_mvccrud.$(LIBEXT) $$path; \
 			$(RM) $$path/mod_mvccrud.a; \
 			$(RM) $$path/mod_mvccrud.la; \
+			break; \
 		fi; \
 	done
 
