added --with-node-gyp-python configure option

--- a/config.mk.in
+++ b/config.mk.in
@@ -371,6 +371,7 @@ NODEGYP = @NODE@ @NODEGYP@
 NODEMODULEDIR = @NODEMODULEDIR@
 NODEJSCFLAGS = @NODEJSCXXFLAGS@ -I@TOP_BUILDDIR_ABS@/src/api/c++ $(RUDIMENTSINCLUDES)
 NODEJSLIBS = -L@TOP_BUILDDIR_ABS@/src/api/c++/.libs -l$(SQLR)client $(RUDIMENTSLIBS)
+NODEGYPPYTHON = @NODEGYPPYTHON@
 
 
 # libsocket
