--- a/src/pwdencs/Makefile
+++ b/src/pwdencs/Makefile
@@ -14,7 +14,7 @@ all: $(SQLR)pwdenc_rot.$(LIBEXT) \
 	$(SQLR)pwdenc_md5.$(LIBEXT) \
 	$(SQLR)pwdenc_sha1.$(LIBEXT) \
 	$(SQLR)pwdenc_sha256.$(LIBEXT) \
-	$(SQLR)pwdenc_crypt.$(LIBEXT) \
+	$(SQLR)pwdenc_des.$(LIBEXT) \
 	$(SQLR)pwdenc_aes128.$(LIBEXT)
 
 clean:
@@ -33,8 +33,8 @@ $(SQLR)pwdenc_sha1.$(LIBEXT): sha1.cpp sha1.$(OBJ)
 $(SQLR)pwdenc_sha256.$(LIBEXT): sha256.cpp sha256.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ sha256.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
-$(SQLR)pwdenc_crypt.$(LIBEXT): crypt.cpp crypt.$(OBJ)
-	$(LTLINK) $(LINK) $(OUT)$@ crypt.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+$(SQLR)pwdenc_des.$(LIBEXT): des.cpp des.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ des.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
 $(SQLR)pwdenc_aes128.$(LIBEXT): aes128.cpp aes128.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ aes128.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
@@ -47,7 +47,7 @@ installdll:
 	$(LTINSTALL) $(CP) $(SQLR)pwdenc_md5.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)pwdenc_sha1.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)pwdenc_sha256.$(LIBEXT) $(libexecdir)
-	$(LTINSTALL) $(CP) $(SQLR)pwdenc_crypt.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)pwdenc_des.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)pwdenc_aes128.$(LIBEXT) $(libexecdir)
 
 installlib: $(INSTALLSHAREDLIB)
@@ -70,10 +70,10 @@ installsharedlib:
 	$(RM) $(libexecdir)/$(SQLR)pwdenc_sha256.a
 	$(RM) $(libexecdir)/$(SQLR)pwdenc_sha256.$(LIBEXT)
 	$(MODULERENAME) $(libexecdir)/$(SQLR)pwdenc_sha256.so so $(MODULESUFFIX)
-	$(LTINSTALL) $(CP) $(SQLR)pwdenc_crypt.$(LIBEXT) $(libexecdir)
-	$(RM) $(libexecdir)/$(SQLR)pwdenc_crypt.a
-	$(RM) $(libexecdir)/$(SQLR)pwdenc_crypt.$(LIBEXT)
-	$(MODULERENAME) $(libexecdir)/$(SQLR)pwdenc_crypt.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)pwdenc_des.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)pwdenc_des.a
+	$(RM) $(libexecdir)/$(SQLR)pwdenc_des.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)pwdenc_des.so so $(MODULESUFFIX)
 	$(LTINSTALL) $(CP) $(SQLR)pwdenc_aes128.$(LIBEXT) $(libexecdir)
 	$(RM) $(libexecdir)/$(SQLR)pwdenc_aes128.a
 	$(RM) $(libexecdir)/$(SQLR)pwdenc_aes128.$(LIBEXT)
@@ -83,6 +83,7 @@ uninstall:
 	$(RM) $(libexecdir)/$(SQLR)pwdenc_rot.* \
 		$(libexecdir)/$(SQLR)pwdenc_md5.* \
 		$(libexecdir)/$(SQLR)pwdenc_crypt.* \
+		$(libexecdir)/$(SQLR)pwdenc_des.* \
 		$(libexecdir)/$(SQLR)pwdenc_aes128.* \
 		$(libexecdir)/sqlrpwdenc_rot.* \
 		$(libexecdir)/sqlrpwdenc_md5.* \
