--- a/test/sqlrelay.conf.d/postgresqlupsert.conf.in
+++ b/test/sqlrelay.conf.d/postgresqlupsert.conf.in
@@ -23,7 +23,7 @@
 			</trigger>
 		</triggers>
 		<connections>
-			<connection string="host=postgresql;user=testuser;password=testpassword;db=@HOSTNAME@;lastinsertidfunction=testfunc();typemangling=lookup;tablemangling=lookup"/>
+			<connection string="host=postgresql;user=testuser;password=testpassword;db=win7x64;lastinsertidfunction=testfunc();typemangling=lookup;tablemangling=lookup"/>
 		</connections>
 	</instance>
 
