--- a/test/sqlrelay.conf.d/informix.conf.in
+++ b/test/sqlrelay.conf.d/informix.conf.in
@@ -6,7 +6,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="informixdir=/opt/informix;servername=ol_informix1210;user=testuser;password=testpassword;db=@HOSTNAME@"/>
+			<connection string="informixdir=/opt/informix;servername=ol_informix1210;user=testuser;password=testpassword;db=win7x64"/>
 		</connections>
 	</instance>
 
