fixed win7x64 -> @HOSTNAME@

--- a/test/sqlrelay.conf.d/mysqlprotocol.conf.in
+++ b/test/sqlrelay.conf.d/mysqlprotocol.conf.in
@@ -11,7 +11,7 @@
 			</auth>
 		</auths>
 		<connections>
-			<connection string="host=mysql;user=testuser;password=testpassword;db=win7x64;foundrows=yes"/>
+			<connection string="host=mysql;user=testuser;password=testpassword;db=@HOSTNAME@;foundrows=yes"/>
 		</connections>
 	</instance>
 
