--- a/test/sqlrelay.conf.d/tls.conf.in
+++ b/test/sqlrelay.conf.d/tls.conf.in
@@ -12,7 +12,7 @@
 			<user user="client.localdomain"/>
 		</users>
 		<connections>
-                        <connection string="oracle_sid=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = oracle)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora1)));user=win7x64;password=testpassword"/>
+                        <connection string="oracle_sid=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = oracle)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora1)));user=@HOSTNAME@;password=testpassword"/>
 		</connections>
 	</instance>
 
