--- a/test/sqlrelay.conf.d/firebird.conf.in
+++ b/test/sqlrelay.conf.d/firebird.conf.in
@@ -6,7 +6,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="user=testuser;password=testpassword;db=firebird:/u02/win7x64.gdb;dialect=3"/>
+			<connection string="user=testuser;password=testpassword;db=firebird:/u02/@HOSTNAME@.gdb;dialect=3"/>
 		</connections>
 	</instance>
 
@@ -15,7 +15,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="user=testuser;password=testpassword;db=firebird3:/u02/win7x64.gdb;dialect=3"/>
+			<connection string="user=testuser;password=testpassword;db=firebird3:/u02/@HOSTNAME@.gdb;dialect=3"/>
 		</connections>
 	</instance>
 
@@ -24,7 +24,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="user=testuser;password=testpassword;db=firebird2:/u02/win7x64.gdb;dialect=3"/>
+			<connection string="user=testuser;password=testpassword;db=firebird2:/u02/@HOSTNAME@.gdb;dialect=3"/>
 		</connections>
 	</instance>
 
