--- a/test/sqlrelay.conf.d/mssql.conf.in
+++ b/test/sqlrelay.conf.d/mssql.conf.in
@@ -1,12 +1,21 @@
 <?xml version="1.0"?>
 <instances>
 
-	<instance id="mssqltest" port="9000" socket="/tmp/test.socket" dbase="odbc" translatebindvariables="yes">
+	<instance id="mssqltest" port="9000" socket="/tmp/test.socket" dbase="odbc">
 		<users>
 			<user user="test" password="test"/>
 		</users>
 		<connections>
 			<connection string="dsn=mssqlodbc;user=testuser;password=testpassword;lastinsertidquery=select @@identity"/>
+		</connections>
+	</instance>
+
+	<instance id="emojitest" port="9000" socket="/tmp/test.socket" dbase="odbc" translatebindvariables="yes">
+		<users>
+			<user user="test" password="test"/>
+		</users>
+		<connections>
+			<connection string="dsn=mssqlodbc;user=testuser;password=testpassword;lastinsertidquery=select @@identity;ncharencoding=UTF-16"/>
 		</connections>
 	</instance>
 
